--- a/vision_rpi_hexabot/vision_rpi_hexabot/msg/.vscode/settings.json
+++ b/vision_rpi_hexabot/vision_rpi_hexabot/msg/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "python.autoComplete.extraPaths": [
+        "/home/michal/ws_moveit2/install/moveit_configs_utils/lib/python3.10/site-packages",
+        "/home/michal/ws_moveit2/install/srdfdom/local/lib/python3.10/dist-packages",
+        "/home/michal/ws_moveit2/install/moveit_task_constructor_msgs/local/lib/python3.10/dist-packages",
+        "/home/michal/ws_moveit2/install/launch_param_builder/lib/python3.10/site-packages",
         "/home/michal/ros2_ws/install/vision_rpi_hexabot/lib/python3.10/site-packages",
         "/home/michal/ros2_ws/install/py_launch_example/lib/python3.10/site-packages",
         "/home/michal/ros2_ws/install/learning_tf2_py/lib/python3.10/site-packages",
@@ -10,6 +14,10 @@
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
     ],
     "python.analysis.extraPaths": [
+        "/home/michal/ws_moveit2/install/moveit_configs_utils/lib/python3.10/site-packages",
+        "/home/michal/ws_moveit2/install/srdfdom/local/lib/python3.10/dist-packages",
+        "/home/michal/ws_moveit2/install/moveit_task_constructor_msgs/local/lib/python3.10/dist-packages",
+        "/home/michal/ws_moveit2/install/launch_param_builder/lib/python3.10/site-packages",
         "/home/michal/ros2_ws/install/vision_rpi_hexabot/lib/python3.10/site-packages",
         "/home/michal/ros2_ws/install/py_launch_example/lib/python3.10/site-packages",
         "/home/michal/ros2_ws/install/learning_tf2_py/lib/python3.10/site-packages",
@@ -18,6 +26,5 @@
         "/home/michal/ros2_ws/ros2_ws/install/action_tutorials_interfaces/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ],
-    "cmake.sourceDirectory": "/home/michal/ros2_ws/src/ROS2-Hexer-robot/vision_rpi_hexabot"
+    ]
 }
