--- a/hexer_description/CMakeLists.txt
+++ b/hexer_description/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(ament_cmake REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 install(
-  DIRECTORY urdf launch rviz
+  DIRECTORY urdf launch rviz mesh
   DESTINATION share/${PROJECT_NAME}/
 )
 
